@@ -29,13 +29,13 @@ void sp_file_save_as (GtkWidget * widget);
 
 void sp_file_import (GtkWidget * widget);
 
-void sp_file_print (GtkWidget * widget);
-void sp_file_print_preview (GtkWidget * widget);
+void sp_file_print (gpointer object, gpointer data);
+void sp_file_print_preview (gpointer object, gpointer data);
 
-void sp_do_file_print (SPDocument * doc);
-
+#if 0
+void sp_do_file_print (SPDocument *doc);
 void sp_do_file_print_to_file (SPDocument * doc, gchar *filename);
-void sp_file_print_preview (GtkWidget * widget);
+#endif
 
 void sp_file_exit (void);
 
